Fixed share via not coming back, open shared item in editor, fixed texts, fixed persistent notification not getting created on first cold boot

--- a/frontend/core/src/main/webapp/static/app/main/settings.html
+++ b/frontend/core/src/main/webapp/static/app/main/settings.html
@@ -122,7 +122,7 @@
           ng-click="settingsCheckboxClicked('keepRunning')"/>
       </div>
       <div class="group-mixed--middle">
-        <span class="text-link">keep extended mind running in the background</span>
+        <span class="text-link">show a persistent quick launch notification</span>
       </div>
     </div>
 
