Fixed a bug where add new item element was not removed/deactivated when task or list editor was opened within it. Refactored editable field container so that registered click elsewhere callback is renamed to deactivate callback to be semantically sound because it is used withing the editable field container as well. Removed click elsewhere callback from the backdrop directive.

--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -5,7 +5,7 @@
     <div list-item-add="getNewItem()" list-item-add-save="saveItem(newItem)">
       <form role="form" class="group-mixed vertically-centered swiper-no-swiping"
         ng-submit="callAndExit(saveItem, newItem)" data-snap-ignore="true" editable-field-container
-        editable-field-container-clicked-elsewhere="clickedElsewhere()"
+        editable-field-container-clicked-elsewhere="onListItemAddExit()"
         autocapitalize="none" autocorrect="off">
         <div class="group-mixed--middle">
           <textarea ng-model="newItem.trans.title" msd-elastic ng-keydown="textareaKeyDown($event)"
