--- a/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
@@ -1,6 +1,6 @@
 <form role="form" class="group-mixed vertically-centered swiper-no-swiping"
   ng-submit="callAndExit(saveList, newItem)" data-snap-ignore="true" editable-field-container
-  editable-field-container-clicked-elsewhere="clickedElsewhere(containerDestroyed)"
+  editable-field-container-clicked-elsewhere="onListItemAddExit()"
   autocapitalize="none" autocorrect="off">
   <div class="group-mixed--left">
     <a href swiper-click="callAndExit(saveListAndChangeFeature, newItem)"
