--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -5,7 +5,7 @@
     <div list-item-add="getNewContext()" list-item-add-save="saveContext(newItem)">
       <form role="form" class="group-mixed vertically-centered swiper-no-swiping"
         data-snap-ignore="true" editable-field-container
-        editable-field-container-clicked-elsewhere="clickedElsewhere()"
+        editable-field-container-clicked-elsewhere="onListItemAddExit()"
         autocapitalize="none" autocorrect="off">
         <div class="group-mixed--middle">
           <textarea ng-model="newItem.trans.title" msd-elastic ng-keydown="textareaKeyDown($event)"
