Fixed a bug where swiping was not disabled when reminder editor or list share editor was open. Now sub editors expand to full height by default and this behaviour is overridden when sub editor is closed by clicking elsewhere.

--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -108,7 +108,8 @@
           </div>
 
           <!-- LIST PICKER -->
-          <div ng-if="showEditorSubEditor('list')" class="swiper-no-swiping animate-fade-in"
+          <div ng-if="showEditorSubEditor('list')"
+            class="container-sub-editor swiper-no-swiping animate-fade-in"
             ng-init="thisList = list"
             editable-field-container="auto" editable-field-container-scrollable="true"
             editable-field-container-clicked-elsewhere="closeListPicker()" data-snap-ignore="true">
@@ -194,7 +195,8 @@
           </div>
 
           <!-- LIST SHARE EDITOR -->
-          <div ng-if="showListSubEditor('share')" class="swiper-no-swiping animate-fade-in">
+          <div ng-if="showListSubEditor('share')"
+            class="container-sub-editor swiper-no-swiping animate-fade-in">
 
             <div ng-if="fullEditor" class="group-mixed vertically-centered">
               <div class="group-mixed--middle">
