Fixed a bug where closing unmodified list picker in note editor caused autosave. Pass close function into list picker to just close it when clicking done on unmodified list picker.

--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -116,6 +116,7 @@
             <div list-picker="getListsArray(list.trans.archived ? 'archivedParentless' : 'activeParentless')"
               list-picker-new-item="getNewList()"
               list-picker-save="closeListPickerAndSetListToItem(thisList, list)"
+              list-picker-close="closeListPicker()"
               list-picker-clear="closeListPickerAndClearListFromItem(thisList, list)"
               list-picker-get-selected="list.trans.list"
               list-picker-get-this-list="list"
