--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -171,6 +171,7 @@
               list-picker-type="active list"
               list-picker-new-item="getNewList()"
               list-picker-save="closeListPickerAndSetListToItem(note, list, autoSaveNote)"
+              list-picker-close="closeListPicker()"
               list-picker-clear="closeListPickerAndClearListFromItem(note, list, autoSaveNote)"
               list-picker-get-selected="note.trans.list"
               list-picker-register-save-new-list-callback="registerSubEditorDoneCallback(saveNewList)"
