--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -262,6 +262,7 @@
               list-picker-type="active list"
               list-picker-new-item="getNewList()"
               list-picker-save="closeListPickerAndSetListToItem(task, list)"
+              list-picker-close="closeListPicker()"
               list-picker-clear="closeListPickerAndClearListFromItem(task, list)"
               list-picker-get-selected="task.trans.list"
               list-picker-register-save-new-list-callback="registerSubEditorDoneCallback(saveNewList)"
@@ -325,6 +326,7 @@
             <div list-picker="getTagsArray('contexts', {owner: task.trans.owner})"
               list-picker-new-item="getNewContext()"
               list-picker-save="closeContextPickerAndSetContextToTask(task, list)"
+              list-picker-close="closeListPicker()"
               list-picker-clear="closeContextPickerAndClearContextFromTask(task, list)"
               list-picker-get-selected="task.trans.context" list-picker-type="context"
               list-picker-prefix="@"
