--- a/frontend/core/src/main/webapp/static/app/lists/listsActive.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsActive.html
@@ -31,6 +31,25 @@
           </div>
         </div>
       </div>
+      <div ng-if="useAdoptedLists()" ng-repeat="(collectiveUUID, adoptedLists) in adoptedLists">
+        <p class="row">
+          <span class="text-heading-primary"
+                ng-bind="'adopted from ' + getCollectiveName(collectiveUUID)"></span></br>
+        </p>
+        <div ng-repeat="adoptedList in adoptedLists">
+          <div class="group-mixed vertically-centered">
+            <div class="group-mixed--left">
+              <a href swiper-click="changeFeature('list', {list: adoptedList, owner: collectiveUUID}, true)">
+                <span class="text-navigation-back large"></span>
+              </a>
+            </div>
+            <a href class="group-mixed--middle link-list-item"
+              swiper-click="changeFeature('list', {list: adoptedList, owner: collectiveUUID}, true)">
+              <span class="text-link" clamp=2 ng-bind="adoptedList.trans.title"></span>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- ONBOARDING -->
