Fixed a bug where app would perform "warm" boot/reload or something when clicked done on focused text property (content, description, url) in editor. Probably parsing $scope variable bound to editable-field-container attribute failed when the element with ng-if was rendered. Now the done/save link has a override class, instead of editable-field-container, which allows pointer events when the backdrop is active.

--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -13,8 +13,8 @@
           </span>
         </a>
 
-        <a href ng-if="showEditorAction('saveDone')" class="group-symmetrical--left highlighted"
-           ng-click="subEditorDone()" editable-field-container="{{listPickerOpen && 'auto'}}">
+        <a href ng-if="showEditorAction('saveDone')"
+          class="group-symmetrical--left highlighted override-disabled" ng-click="subEditorDone()">
           <span class="text-edit" ng-bind="isPropertyEdited() ? 'save' : 'done'"></span>
         </a>
 
