--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -12,8 +12,8 @@
           </span>
         </a>
 
-        <a href ng-if="showEditorAction('saveDone')" class="group-symmetrical--left highlighted"
-          ng-click="subEditorDone()"
+        <a href ng-if="showEditorAction('saveDone')"
+          class="group-symmetrical--left highlighted override-disabled" ng-click="subEditorDone()"
           editable-field-container="{{(listPickerOpen || keywordsPickerOpen) && 'auto'}}">
           <span class="text-edit" ng-bind="isPropertyEdited() ? 'save' : 'done'"></span>
         </a>
