--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -101,7 +101,7 @@
           <!-- LIST -->
           <div ng-if="showNoteProperty('list')" class="group-mixed">
             <a href class="group-mixed--middle link-search-result" swiper-click="openListPicker()">
-              <span class="text-field--title" ng-bind="note.trans.list.trans.title"></span>
+              <span class="text-field--title"  clamp=1 ng-bind="note.trans.list.trans.title"></span>
             </a>
             <div class="group-mixed--right">
               <span class="text-field--label">list</span>
