--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -241,7 +241,7 @@
           <div ng-show="showTaskProperty('list')" class="group-mixed">
             <a href class="group-mixed--middle link-search-result" ng-class="!task.trans.list && 'downplayed'"
               swiper-click="openListPicker()">
-              <span class="text-field--title"
+              <span class="text-field--title" clamp=1
                 ng-bind="(task.trans.list && !task.trans.list.trans.deleted) ? task.trans.list.trans.title : 'select list\u2026'">
               </span>
             </a>
