--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -13,8 +13,7 @@
         </a>
 
         <a href ng-if="showEditorAction('saveDone')"
-          class="group-symmetrical--left highlighted override-disabled" ng-click="subEditorDone()"
-          editable-field-container="{{(listPickerOpen || keywordsPickerOpen) && 'auto'}}">
+          class="group-symmetrical--left highlighted override-disabled" ng-click="subEditorDone()">
           <span class="text-edit" ng-bind="isPropertyEdited() ? 'save' : 'done'"></span>
         </a>
 
