--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -84,14 +84,34 @@
           </div>
 
           <!-- URL -->
-          <div ng-if="drawerAisleInitialized && showEditorProperty('url')"
-               class="row-vertically-centered with-textarea">
-            <textarea class="text-metadata" ng-model="list.trans.link" input-model-validator
-              ng-trim="false"
-              ng-focus="setTextPropertyFocus('url', true)" ng-blur="setTextPropertyFocus('url', false)"
-              ng-disabled="readOnly" msd-elastic
-              maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
-            </textarea>
+          <div ng-if="showEditorProperty('url')">
+            <div ng-show="showEditorComponent('urlTextArea', list)"
+                 class="row-vertically-centered with-textarea" >
+              <textarea class="text-metadata" ng-model="list.trans.link" input-model-validator ng-trim="false"
+                editable-field
+                editable-field-register-callbacks="registerUrlInputCallbacks(focus, blur)"
+                editable-field-focus="setTextPropertyFocus('url', true)"
+                editable-field-blur="setTextPropertyFocus('url', false, list)"
+                ng-keydown="urlTextKeyDown($event, list)"
+                ng-disabled="readOnly" msd-elastic
+                maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
+              </textarea>
+            </div>
+            <div ng-if="showEditorComponent('urlLink', list)" class="group-mixed">
+              <a class="group-mixed--middle" ng-click="clickUrl(list)"
+                 ng-class="showEditorComponent('urlLinkError', list) ? 'link-disabled' : 'highlighted'"
+                 external-link="getItemHref(list)">
+                <span class="text-metadata" ng-bind="getItemVisibleUrl(list)"></span>
+              </a>
+              <div class="group-mixed--right">
+                <a href ng-click="setUrlFocus()">
+                  <span class="icon-pencil"></span>
+                </a>
+              </div>
+            </div>
+            <div ng-if="showEditorComponent('urlLinkError', list)" class="group-error row-form">
+              <span class="text-error">invalid url</span>
+            </div>
           </div>
 
           <!-- LIST -->
@@ -264,6 +284,16 @@
             </div>
             <div class="group-mixed--right">
               <span class="text-field--label">deleted</span>
+            </div>
+          </div>
+          <div ng-if="showEditorProperty('archived', list)" class="group-mixed text-field">
+            <div class="group-mixed--middle link-search-result">
+              <span class="text-field--title">
+                {{::list.trans.archived | date:'EEE d MMMM y hh:mm' | lowercase}}
+              </span>
+            </div>
+            <div class="group-mixed--right">
+              <span class="text-field--label">archived</span>
             </div>
           </div>
         </div>
