--- a/frontend/core/src/main/webapp/static/app/main/itemEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemEditor.html
@@ -88,6 +88,46 @@
         </div>
       </div>
 
+      <!-- COLLAPSIBLE-->
+      <div ng-if="showItemEditorComponent('collapsible')">
+        <div ng-if="showEditorProperty('created', item)" class="group-mixed text-field">
+          <div class="group-mixed--middle">
+            <span class="text-field--title">
+              {{::item.trans.created | date:'EEE d MMMM y hh:mm' | lowercase}}
+            </span>
+          </div>
+          <div class="group-mixed--right">
+            <span class="text-field--label">created</span>
+          </div>
+        </div>
+        <div ng-if="showEditorProperty('modified', item)" class="group-mixed text-field">
+          <div class="group-mixed--middle link-search-result">
+            <span class="text-field--title">
+              {{item.trans.modified | date:'EEE d MMMM y hh:mm' | lowercase}}
+            </span>
+          </div>
+          <div class="group-mixed--right">
+            <span class="text-field--label">modified</span>
+          </div>
+        </div>
+        <div ng-if="showEditorProperty('deleted', item)" class="group-mixed text-field">
+          <div class="group-mixed--middle link-search-result">
+            <span class="text-field--title">
+              {{::item.trans.deleted | date:'EEE d MMMM y hh:mm' | lowercase}}
+            </span>
+          </div>
+          <div class="group-mixed--right">
+            <span class="text-field--label">deleted</span>
+          </div>
+        </div>
+      </div>
+      <div ng-if="showItemEditorComponent('lessMore')" class="row collapsible">
+        <a href class="downplayed" swiper-click="toggleCollapsible()">
+          <span ng-class="collapsibleOpen ? 'text-expand-up' : 'text-expand-down'"
+            ng-bind="collapsibleOpen ? 'less' : 'more'"></span>
+        </a>
+      </div>
+
       <!-- DESCRIPTION -->
       <textarea ng-if="drawerAisleInitialized && showEditorProperty('description')" id="ignoreSnap"
         ng-model="item.trans.description"
