--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -362,13 +362,35 @@
             </div>
           </div>
 
-          <div ng-if="showEditorProperty('url')" class="row-vertically-centered with-textarea">
-            <textarea class="text-metadata" ng-model="task.trans.link" input-model-validator ng-trim="false"
-              msd-elastic
-              ng-focus="setTextPropertyFocus('url', true)" ng-blur="setTextPropertyFocus('url', false)"
-              ng-disabled="readOnly"
-              maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
-            </textarea>
+          <!-- URL -->
+          <div ng-if="showEditorProperty('url')">
+            <div ng-show="showEditorComponent('urlTextArea', task)"
+                 class="row-vertically-centered with-textarea" >
+              <textarea class="text-metadata" ng-model="task.trans.link" input-model-validator ng-trim="false"
+                editable-field
+                editable-field-register-callbacks="registerUrlInputCallbacks(focus, blur)"
+                editable-field-focus="setTextPropertyFocus('url', true)"
+                editable-field-blur="setTextPropertyFocus('url', false, task)"
+                ng-keydown="urlTextKeyDown($event, task)"
+                ng-disabled="readOnly" msd-elastic
+                maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
+              </textarea>
+            </div>
+            <div ng-if="showEditorComponent('urlLink', task)" class="group-mixed">
+              <a class="group-mixed--middle" ng-click="clickUrl(task)"
+                 ng-class="showEditorComponent('urlLinkError', task) ? 'link-disabled' : 'highlighted'"
+                 external-link="getItemHref(task)">
+                <span class="text-metadata" ng-bind="getItemVisibleUrl(task)"></span>
+              </a>
+              <div class="group-mixed--right">
+                <a href ng-click="setUrlFocus()">
+                  <span class="icon-pencil"></span>
+                </a>
+              </div>
+            </div>
+            <div ng-if="showEditorComponent('urlLinkError', task)" class="group-error row-form">
+              <span class="text-error">invalid url</span>
+            </div>
           </div>
 
           <div ng-if="showEditorProperty('created', task)" class="group-mixed text-field">
@@ -399,6 +421,16 @@
             </div>
             <div class="group-mixed--right">
               <span class="text-field--label">deleted</span>
+            </div>
+          </div>
+          <div ng-if="showEditorProperty('archived', task)" class="group-mixed text-field">
+            <div class="group-mixed--middle link-search-result">
+              <span class="text-field--title">
+                {{::task.trans.archived | date:'EEE d MMMM y hh:mm' | lowercase}}
+              </span>
+            </div>
+            <div class="group-mixed--right">
+              <span class="text-field--label">archived</span>
             </div>
           </div>
 
