Fixed last line of a title was not visible in list and note editor in some cases when the title would expand to multiple rows. Dimensions for inline textarea is calculated wrong when the visibility of components next to it are defined with ng-if instead of ng-show/hide. Probably it happens because elements with ng-if are not initially rendered into the DOM and dimension calculation is done at that time. Fixed by changing ng-if to ng-show.

--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -75,7 +75,7 @@
                 </textarea>
               </div>
 
-              <div ng-if="showListAction('favorite')" class="group-mixed--right">
+              <div ng-show="showListAction('favorite')" class="group-mixed--right">
                 <a href class="link-navigation" swiper-click="clickFavorite()">
                   <span class="icon-star large" ng-class="!isFavoriteList(list) && 'inactive'"></span>
                 </a>
