--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -79,7 +79,7 @@
                 </textarea>
               </div>
 
-              <div ng-if="showNoteProperty('favorite')" class="group-mixed--right">
+              <div ng-show="showNoteProperty('favorite')" class="group-mixed--right">
                 <a href class="link-navigation" swiper-click="clickFavorite()">
                   <span class="icon-star large" ng-class="!note.trans.favorited && 'inactive'"></span>
                 </a>
